# nucleo-f103rb

./: Cargo.toml  README.md  nucleo.cfg  openocd_program.sh
examples/: gpio_hal_blinky.rs  i2c_hal_ssd1306alphabeter.rs  i2c_hal_ssd1306display.rs  serial_hal_blocking_echo.rs
src/: lib.rs
