[package]
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "no-std",
    "bsp",
]
keywords = [
    "arm",
    "cortex-m",
    "template",
]
name = "nucleo-f103rb"
version = "0.1.0"

[dependencies]
bare-metal = "0.1.1"
cortex-m = "0.4.3"
nb = "0.1.1"
numtoa = "0.0.7"
static-ref = "0.2.1"
vcell = "0.1.0"
volatile-register = "0.2.0"

[dependencies.cortex-m-rt]
features = ["abort-on-panic"]
version = "0.3.12"

[dependencies.stm32f103xx]
features = ["rt"]
version = "0.8.0"

[dependencies.stm32f103xx-hal]
features = ["rt"]
git = "https://github.com/japaric/stm32f103xx-hal"

[features]
default = ["rt"]
rt = []

[profile.dev]
codegen-units = 1
debug = true
lto = true

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = "s"
