[package]
edition = "2018"
authors = ["Daniel Egger <daniel@eggers-club.de>"]
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the STM32 Nucleo-F103RB microcontroller board"
documentation = "https://docs.rs/nucleo-f103rb"
keywords = [
    "arm",
    "cortex-m",
    "template",
    "bsp",
]
license = "0BSD"
name = "nucleo-f103rb"
version = "0.3.0"
repository = "https://github.com/therealprof/nucleo-f103rb"

[dependencies]
bare-metal = "0.2"
cortex-m = "0.6"
nb = "0.1"
cortex-m-rt = "0.6"

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "medium", "rt"]
version = "0.5"

[dev-dependencies]
panic-halt = "0.2"
numtoa = "0.2"
vcell = "0.1"
volatile-register = "0.2"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
